--- a/ProyectoFinal.ipynb
+++ b/ProyectoFinal.ipynb
@@ -411,7 +411,7 @@
       },
       "source": [
         "## 3. Training\n",
-        "Now, let's set up the training loo. In this training function, we calculate the loss for each batch and update the model's weights.:"
+        "Now, let's set up the training loop. In this training function, we calculate the loss for each batch and update the model's weights:"
       ]
     },
     {
@@ -424,26 +424,47 @@
       "outputs": [],
       "source": [
         "def train(model, data_loader, optimizer, criterion, vocab_size, device):\n",
+        "    \"\"\"\n",
+        "    Train the given model using the provided data loader, optimizer, and criterion.\n",
+        "\n",
+        "    Args:\n",
+        "    - model (nn.Module): The neural network model to be trained.\n",
+        "    - data_loader (DataLoader): DataLoader providing training data.\n",
+        "    - optimizer (torch.optim.Optimizer): The optimizer used for training.\n",
+        "    - criterion (nn.Module): The loss function used for training.\n",
+        "    - vocab_size (int): Size of the vocabulary.\n",
+        "    - device (torch.device): Device (CPU or GPU) on which to perform training.\n",
+        "\n",
+        "    Returns:\n",
+        "    - float: Average training loss over the entire dataset.\n",
+        "    \"\"\"\n",
+        "    # Set the model to training mode\n",
         "    model.train()\n",
+        "    # Initialize the total loss\n",
         "    total_loss = 0\n",
         "\n",
+        "    # Iterate through batches in the data loader\n",
         "    for idx, (images, captions) in enumerate(data_loader):\n",
+        "        # Move images and captions to the specified device\n",
         "        images, captions = images.to(device), captions.to(device)\n",
         "\n",
-        "        # Zero the gradients\n",
+        "        # Zero the gradients in the optimizer\n",
         "        optimizer.zero_grad()\n",
         "\n",
         "        # Forward pass\n",
         "        outputs = model(images, captions[:-1])\n",
+        "        # Reshape outputs and captions for calculating the loss\n",
         "        loss = criterion(outputs.reshape(-1, vocab_size), captions.reshape(-1))\n",
         "\n",
         "        # Backward pass and optimization\n",
         "        loss.backward()\n",
         "        optimizer.step()\n",
         "\n",
+        "        # Accumulate the total loss\n",
         "        total_loss += loss.item()\n",
         "\n",
-        "    return total_loss / len(data_loader)\n"
+        "    # Calculate and return the average training loss\n",
+        "    return total_loss / len(data_loader)"
       ]
     },
     {
@@ -454,7 +475,7 @@
       },
       "source": [
         "## Step 4: Evaluation with BLEU\n",
-        "For evaluating an image captioning model, you can use metrics like BLEU (Bilingual Evaluation Understudy Score). However, please note that BLEU is not perfect and might not always align with human judgment. It's typically used to get a quantitative estimate of the model's performance. Here's an example of how you can implement a simple evaluation function:"
+        "For evaluating an image captioning model, you can use metrics like BLEU (Bilingual Evaluation Understudy Score). However, please note that BLEU is not perfect and might not always align with human judgment. It's typically used to get a quantitative estimate of the model's performance."
       ]
     },
     {
@@ -469,29 +490,48 @@
         "from nltk.translate.bleu_score import corpus_bleu\n",
         "\n",
         "def evaluate(model, data_loader, device):\n",
+        "    \"\"\"\n",
+        "    Evaluate the given model using the provided data loader and vocabulary.\n",
+        "\n",
+        "    Args:\n",
+        "    - model (nn.Module): The neural network model to be evaluated.\n",
+        "    - data_loader (DataLoader): DataLoader providing evaluation data.\n",
+        "    - device (torch.device): Device (CPU or GPU) on which to perform evaluation.\n",
+        "    - vocab (Vocabulary): Vocabulary object for converting indices to words.\n",
+        "\n",
+        "    Returns:\n",
+        "    - float: BLEU-4 score calculated on the evaluation dataset.\n",
+        "    \"\"\"\n",
+        "    # Set the model to evaluation mode\n",
         "    model.eval()\n",
+        "    # Lists to store references and hypotheses for BLEU calculation\n",
         "    references = []\n",
         "    hypotheses = []\n",
         "\n",
+        "    # Disable gradient computation during evaluation\n",
         "    with torch.no_grad():\n",
+        "        # Iterate through batches in the data loader\n",
         "        for images, captions in data_loader:\n",
+        "            # Move images and captions to the specified device\n",
         "            images = images.to(device)\n",
         "            captions = captions.to(device)\n",
         "\n",
-        "            # Generate captions\n",
+        "            # Generate captions using the trained model\n",
         "            outputs = model.caption_image(images, vocab)\n",
         "            outputs = [[vocab.itos[idx] for idx in seq] for seq in outputs]\n",
         "\n",
-        "            # Convert targets to words\n",
+        "            # Convert target captions to words\n",
         "            targets = [[vocab.itos[idx] for idx in seq] for seq in captions.cpu().numpy()]\n",
         "\n",
         "            # Collect references and hypotheses for BLEU calculation\n",
         "            references.extend(targets)\n",
         "            hypotheses.extend(outputs)\n",
         "\n",
-        "    # Calculate BLEU-4 score\n",
+        "    # Calculate BLEU-4 score using NLTK's corpus_bleu function\n",
         "    bleu4 = corpus_bleu(references, hypotheses, weights=(0.25, 0.25, 0.25, 0.25))\n",
-        "    return bleu4\n"
+        "\n",
+        "    # Return the BLEU-4 score\n",
+        "    return bleu4"
       ]
     },
     {
@@ -503,7 +543,7 @@
       "source": [
         "## 5. Train the Data\n",
         "\n",
-        "Finally,we  initialize the model, optimizer, and loss function, and start the training process.."
+        "Finally, we initialized the model, the optimizer, and the loss function and start the training process."
       ]
     },
     {
@@ -529,23 +569,21 @@
         }
       ],
       "source": [
-        "\n",
-        "\n",
-        "# Hyperparameters\n",
-        "embed_size = 256\n",
-        "hidden_size = 512\n",
-        "vocab_size = len(vocab)\n",
-        "num_layers = 1\n",
-        "learning_rate = 3e-4\n",
+        "# Hyperparameters definition\n",
+        "embed_size = 256  # Size of the word embeddings\n",
+        "hidden_size = 512  # Size of the hidden state in the LSTM\n",
+        "vocab_size = len(vocab)  # Size of the vocabulary\n",
+        "num_layers = 1  # Number of layers in the LSTM\n",
+        "learning_rate = 3e-4  # Learning rate for the optimizer\n",
         "\n",
         "# Initialize the data loader and get the vocabulary\n",
         "data_loader, vocab = get_loader(root_folder, annotation_file, transform)\n",
         "\n",
         "# Initialize model, optimizer, and loss function\n",
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "model = CNNtoRNN(embed_size, hidden_size, vocab_size, num_layers).to(device)\n",
-        "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
-        "criterion = nn.CrossEntropyLoss(ignore_index=vocab.stoi[\"<PAD>\"])\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")  # Choose device (GPU if available, else CPU)\n",
+        "model = CNNtoRNN(embed_size, hidden_size, vocab_size, num_layers).to(device)  # Create the CNN-to-RNN model\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)  # Adam optimizer\n",
+        "criterion = nn.CrossEntropyLoss(ignore_index=vocab.stoi[\"<PAD>\"])  # Cross-entropy loss with padding ignored\n",
         "\n",
         "# Define number of epochs\n",
         "num_epochs = 10\n",
@@ -553,28 +591,30 @@
         "# Training and evaluation loop\n",
         "for epoch in range(num_epochs):\n",
         "    # Training\n",
-        "    model.train()\n",
+        "    model.train()  # Set the model to training mode\n",
         "    total_loss = 0\n",
+        "\n",
+        "    # Iterate through batches in the data loader\n",
         "    for idx, (images, captions) in enumerate(data_loader):\n",
-        "        images, captions = images.to(device), captions.to(device)\n",
+        "        images, captions = images.to(device), captions.to(device)  # Move data to the specified device\n",
         "\n",
         "        # Forward pass\n",
-        "        outputs = model(images, captions[:-1])\n",
-        "        loss = criterion(outputs.reshape(-1, vocab_size), captions.reshape(-1))\n",
+        "        outputs = model(images, captions[:-1])  # Predict captions (excluding the last token)\n",
+        "        loss = criterion(outputs.reshape(-1, vocab_size), captions.reshape(-1))  # Calculate the loss\n",
         "\n",
         "        # Backward pass and optimization\n",
-        "        optimizer.zero_grad()\n",
-        "        loss.backward()\n",
-        "        optimizer.step()\n",
+        "        optimizer.zero_grad()  # Zero the gradients\n",
+        "        loss.backward()  # Perform backward pass\n",
+        "        optimizer.step()  # Update model parameters\n",
         "\n",
-        "        total_loss += loss.item()\n",
+        "        total_loss += loss.item()  # Accumulate the total loss\n",
         "\n",
-        "    avg_loss = total_loss / len(data_loader)\n",
+        "    avg_loss = total_loss / len(data_loader)  # Calculate average loss\n",
         "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {avg_loss:.4f}\")\n",
         "\n",
         "    # Evaluation\n",
-        "    bleu4 = evaluate(model, data_loader, device)\n",
-        "    print(f\"Epoch [{epoch+1}/{num_epochs}], BLEU-4: {bleu4:.4f}\")\n"
+        "    bleu4 = evaluate(model, data_loader, device, vocab)  # Evaluate BLEU-4 score\n",
+        "    print(f\"Epoch [{epoch+1}/{num_epochs}], BLEU-4: {bleu4:.4f}\")"
       ]
     },
     {
@@ -585,10 +625,9 @@
       },
       "source": [
         "## 6. Generate a Prediction\n",
-        "You need a function to transform a new input image into the same format as the training images. You'll use the caption_image method from the CNNtoRNN class. Let's write a function to take an image path and generate a caption:\n",
+        "You need a function to transform a new input image into the same format as the training images, using the caption_image method from the CNNtoRNN class. Here's a function that takes an image path and generates a caption:\n",
         "\n",
-        "In this code, generate_caption takes the path of the image you want to caption, uses the trained model directly, and processes the image using the same transform as during training. The model variable is assumed to be the same one you trained earlier in the script.\n",
-        "s."
+        "In this code, generate_caption takes the path of the image you want to caption, uses the trained model directly, and processes the image using the same transform as during training. The model variable is assumed to be the same one you trained earlier in the script."
       ]
     },
     {
@@ -600,12 +639,25 @@
       },
       "outputs": [],
       "source": [
-        "from PIL import Image\n",
-        "\n",
         "def load_image(image_path, transform=None):\n",
+        "    \"\"\"\n",
+        "    Load an image from the specified file path and apply optional transformations.\n",
+        "\n",
+        "    Args:\n",
+        "    - image_path (str): File path of the image.\n",
+        "    - transform (callable, optional): Transformation to be applied to the image.\n",
+        "\n",
+        "    Returns:\n",
+        "    - torch.Tensor: Processed image tensor.\n",
+        "    \"\"\"\n",
+        "    # Open the image using PIL and convert it to RGB format\n",
         "    image = Image.open(image_path).convert(\"RGB\")\n",
+        "\n",
+        "    # Apply the specified transformation if provided\n",
         "    if transform is not None:\n",
-        "        image = transform(image).unsqueeze(0)\n",
+        "        image = transform(image).unsqueeze(0)  # Add an extra dimension for batch (unsqueeze)\n",
+        "\n",
+        "    # Return the processed image tensor\n",
         "    return image\n"
       ]
     },
@@ -628,8 +680,25 @@
       },
       "outputs": [],
       "source": [
+        "# Function to generate captions for an input image\n",
         "def generate_caption(image_path, model, vocabulary, transform, device):\n",
+        "    \"\"\"\n",
+        "    Generate a caption for the input image using the trained model and vocabulary.\n",
+        "\n",
+        "    Args:\n",
+        "    - image_path (str): File path of the input image.\n",
+        "    - model (nn.Module): Trained model for generating captions.\n",
+        "    - vocabulary (Vocabulary): Vocabulary object for converting indices to words.\n",
+        "    - transform (callable): Transformation to be applied to the input image.\n",
+        "    - device (torch.device): Device (CPU or GPU) on which to perform inference.\n",
+        "\n",
+        "    Returns:\n",
+        "    - str: Generated caption for the input image.\n",
+        "    \"\"\"\n",
+        "    # Set the model to evaluation mode\n",
         "    model.eval()\n",
+        "\n",
+        "    # Load and transform the input image\n",
         "    image = load_image(image_path, transform)\n",
         "    image = image.to(device)\n",
         "\n",
@@ -637,7 +706,7 @@
         "    with torch.no_grad():\n",
         "        caption = model.caption_image(image, vocabulary, max_length=50)\n",
         "\n",
-        "    # Convert caption tokens to words and join\n",
+        "    # Filter out special tokens and join the words to form the final caption\n",
         "    caption = [word for word in caption if word not in {\"<SOS>\", \"<EOS>\", \"<PAD>\", \"<UNK>\"}]\n",
         "    return ' '.join(caption)\n",
         "\n",
@@ -652,27 +721,12 @@
         "# Define the device\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
-        "# Function for generating captions\n",
-        "def generate_caption(image_path, model, vocabulary, transform, device):\n",
-        "    model.eval()\n",
-        "    image = load_image(image_path, transform)\n",
-        "    image = image.to(device)\n",
-        "\n",
-        "    # Generate caption\n",
-        "    with torch.no_grad():\n",
-        "        caption = model.caption_image(image, vocabulary, max_length=50)\n",
-        "\n",
-        "    # Convert caption tokens to words and join\n",
-        "    caption = [word for word in caption if word not in {\"<SOS>\", \"<EOS>\", \"<PAD>\", \"<UNK>\"}]\n",
-        "    return ' '.join(caption)\n",
-        "\n",
         "# Path to your input image\n",
         "image_path = 'path_to_your_image.jpg'\n",
         "\n",
-        "# Generate caption\n",
+        "# Generate caption for the input image\n",
         "caption = generate_caption(image_path, model, vocab, transform, device)\n",
-        "print(\"Generated Caption:\", caption)\n",
-        "\n"
+        "print(\"Generated Caption:\", caption)"
       ]
     }
   ],
